--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.5"
   - "3.6"
 # command to install dependencies
-install: "pip install -r requirements.txt; pip install ."
+install:
+  - "pip install -r requirements.txt; "
+  - "pip install ."
 # command to run tests
 script: pytest
