--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ python:
 # command to install dependencies
 install:
   - "pip install -r requirements.txt; "
+  - "pip install coveralls"
   - "pip install ."
 # command to run tests
-script: pytest
+script:
+  coverage run --source=sym_dict setup.py test
+
+after_success:
+  coveralls
