--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - "pip install ."
 # command to run tests
 script:
-  coverage run --source=sym_dict setup.py test
+  py.test --cov=sym_dict
 
 after_success:
   coveralls
