--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - "pip install ."
 # command to run tests
 script:
-  py.test --cov=sym_dict
+  pytest --cov=sym_dict
 
 after_success:
   coveralls
