--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install:
   - "pip install -r requirements.txt; "
   - "pip install coveralls"
+  - "pip install pytest-cov"
   - "pip install ."
 # command to run tests
 script:
