--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ python:
 install:
   - "pip install -r requirements.txt; "
   - "pip install coveralls"
-  - "pip install pytest-cov"
   - "pip install ."
 # command to run tests
 script:
-  pytest --cov=sym_dict
+  coverage run --source=sym_dict setup.py test
 
 after_success:
   coveralls
